--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
         <div class="logo">📚</div>
         <div class="title">Paper Finder</div>
       </div>
-      <div class="subtitle">Powered by Crossref API</div>
+      <div class="subtitle"><a href="https://www.ilhammaulana.id/" target="_blank" rel="noopener">by Ilham Maulana</a> • Powered by Crossref API</div>
     </div>
     <div class="card">
       <div class="section-title">Pencarian Literatur</div>
@@ -38,6 +38,9 @@
             <input id="maxResults" type="number" min="1" max="100" value="50" />
           </div>
         </div>
+        <label class="inline">
+          <input id="onlyPdf" type="checkbox" /> Hanya tampilkan yang punya PDF
+        </label>
         <button id="searchBtn">Cari</button>
       </div>
     </div>
